# LUA1

./: README.md  android-build.yml
.github/workflows/: android-build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: labels.txt
app/src/main/cpp/model-parameters/: model_metadata.h  model_variables.h
app/src/main/cpp/tflite-model/: tflite-resolver.h  tflite_learn_841585_5.h
app/src/main/java/com/example/eiapp/: MainActivity.kt
ei_android_project/app/: build.gradle
ei_android_project/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ei_android_project/app/src/main/java/com/example/eiapp/: MainActivity.java
ei_android_project/app/src/main/res/layout/: activity_main.xml
